--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Compra En Shein</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js"></script>
+    <script src="https://cdn.lordicon.com/pzdvqjsp.js"></script>
 </head>
 <body>
     <main>
@@ -30,15 +31,36 @@
                     <h2>BENEFICIOS DE COMPRAR EN SHEIN</h2>
                     <div class="enlaces_container">
                         <div class="enlace">
-                            <span class="icon"><i class="fa-solid fa-shirt"></i></span>
+                            <span class="icon">
+                                <lord-icon
+                                    src="https://cdn.lordicon.com/rjzlnunf.json"
+                                    trigger="hover"
+                                    colors="primary:#110a5c,secondary:#110a5c"
+                                    style="width:250px;height:250px">
+                                </lord-icon>
+                            </span>
                             <p>El outfit <br> que necesitas</p>
                         </div>
                         <div class="enlace">
-                            <span class="icon"><i class="fa-solid fa-percent"></i></span>
+                            <span class="icon">
+                                <lord-icon
+                                    src="https://cdn.lordicon.com/qrbokoyz.json"
+                                    trigger="hover"
+                                    colors="primary:#110a5c,secondary:#110a5c"
+                                    style="width:250px;height:250px">
+                                </lord-icon>
+                            </span>
                             <p>Ropa super <br> económica</p>
                         </div>
                         <div class="enlace">
-                            <span class="icon"><i class="fa-solid fa-bag-shopping"></i></span>
+                            <span class="icon">
+                                <lord-icon
+                                    src="https://cdn.lordicon.com/dnoiydox.json"
+                                    trigger="hover"
+                                    colors="primary:#110a5c,secondary:#110a5c"
+                                    style="width:250px;height:250px">
+                                </lord-icon>
+                            </span>
                             <p>Entregas <br> semanales</p>
                         </div>
                     </div>
