--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </div>
             <div class="segundario">
                 <div class="titulo">
-                    <h1>Trae TODO <br> lo que quieras <br> de SHEIN</h1>
+                    <h1>Trae TODO <br> <span class="lpt">lo que</span> quieras <br> <span class="lpt">de</span> SHEIN</h1>
                     <a href="https://api.whatsapp.com/send?phone=50374687973" target="_blank">
-                        LUCE COMO NUNCA ANTES ¡¡¡ESCRIBENOS!!!
+                        LUCE COMO NUNCA ANTES - <i class="fa-brands fa-whatsapp"></i> ¡ESCRIBENOS!
                     </a>
                 </div>
                 <div class="informacion">
