--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
             <div class="segundario">
                 <div class="titulo">
                     <h1>Trae TODO <br> <span class="lpt">lo que</span> quieras <br> <span class="lpt">de</span> SHEIN</h1>
-                    <a href="https://api.whatsapp.com/send?phone=50374687973" target="_blank">
-                        LUCE COMO NUNCA ANTES - <i class="fa-brands fa-whatsapp"></i> ¡ESCRIBENOS!
-                    </a>
+                    <div class="contacto">
+                        LUCE COMO NUNCA ANTES <br>
+                        <a href="https://api.whatsapp.com/send?phone=50374687973" target="_blank">
+                            <span class="btn_fig_whatsapp">
+                                <i class="fa-brands fa-whatsapp"></i> ¡ESCRIBENOS!
+                            </span> 
+                        </a>
+                    </div>
                 </div>
                 <div class="informacion">
                     <h2>BENEFICIOS DE COMPRAR EN SHEIN</h2>
@@ -36,7 +41,7 @@
                                     src="https://cdn.lordicon.com/rjzlnunf.json"
                                     trigger="hover"
                                     colors="primary:#110a5c,secondary:#110a5c"
-                                    style="width:250px;height:250px">
+                                    style="width:150px;height:150px">
                                 </lord-icon>
                             </span>
                             <p>El outfit <br> que necesitas</p>
@@ -47,7 +52,7 @@
                                     src="https://cdn.lordicon.com/qrbokoyz.json"
                                     trigger="hover"
                                     colors="primary:#110a5c,secondary:#110a5c"
-                                    style="width:250px;height:250px">
+                                    style="width:150px;height:150px">
                                 </lord-icon>
                             </span>
                             <p>Ropa super <br> económica</p>
@@ -58,7 +63,7 @@
                                     src="https://cdn.lordicon.com/dnoiydox.json"
                                     trigger="hover"
                                     colors="primary:#110a5c,secondary:#110a5c"
-                                    style="width:250px;height:250px">
+                                    style="width:150px;height:150px">
                                 </lord-icon>
                             </span>
                             <p>Entregas <br> semanales</p>
