--- a/index.html
+++ b/index.html
@@ -73,5 +73,26 @@
             </div>
         </div>
     </main>
+
+    <!-- Boton que activa la modal -->
+    <a class="btn_trespasos" id="btn_3">3 Pasos para emprender</a>
+    
+    <!-- Ventana modal -->
+    <div id="IrVentanaFlotante" class="modal">
+        <div class="ventana">
+            <a class="close_modal" id="close_modal">X</a>
+            <h2>3 Pasos para emprender:</h2>
+            <p>1 - Piensa en todos los productos que te gustaría vender y anótalos.</p>
+            <br>
+            <p>2 - Selecciona la idea que consideres que te conviene más.</p>
+            <br>
+            <p>3 - Escríbenos para asesorarte sobre las tiendas en línea donde puedes pedir tus productos</p>
+            <a class="btn_modal_contacto" href="https://api.whatsapp.com/send?phone=50374687973" target="_blank"><i class="fa-brands fa-whatsapp"></i> Más información</a>
+            <br>
+        </div>  
+    </div>
+
+    <!-- JS -->
+    <script src="main.js"></script>
 </body>
 </html>
