--- a/index.html
+++ b/index.html
@@ -4,95 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
-    <title>Compra En Shein</title>
+    <title>Maquillaje</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js"></script>
-    <script src="https://cdn.lordicon.com/pzdvqjsp.js"></script>
+    <link rel="stylesheet" href="./estilos.css">
 </head>
 <body>
-    <main>
-        <div class="container">
-            <div class="primario">
-                <div class="logo">
-                    <img src="./img/logoOriginal.svg" alt="">
-                </div>
-                <div class="chicas">
-                    <img src="./img/chicas.png" alt="">
-                </div>
-            </div>
-            <div class="segundario">
-                <div class="titulo">
-                    <h1>Trae TODO <br> <span class="lpt">lo que</span> quieras <br> <span class="lpt">de</span> SHEIN</h1>
-                    <div class="contacto">
-                        LUCE COMO NUNCA ANTES <br>
-                        <a href="https://api.whatsapp.com/send?phone=50374687973" target="_blank">
-                            <span class="btn_fig_whatsapp">
-                                <i class="fa-brands fa-whatsapp"></i> ¡ESCRIBENOS!
-                            </span> 
-                        </a>
-                    </div>
-                </div>
-                <div class="informacion">
-                    <h2>BENEFICIOS DE COMPRAR EN SHEIN</h2>
-                    <div class="enlaces_container">
-                        <div class="enlace">
-                            <span class="icon">
-                                <lord-icon
-                                    src="https://cdn.lordicon.com/rjzlnunf.json"
-                                    trigger="hover"
-                                    colors="primary:#110a5c,secondary:#110a5c"
-                                    style="width:150px;height:150px">
-                                </lord-icon>
-                            </span>
-                            <p>El outfit <br> que necesitas</p>
-                        </div>
-                        <div class="enlace">
-                            <span class="icon">
-                                <lord-icon
-                                    src="https://cdn.lordicon.com/qrbokoyz.json"
-                                    trigger="hover"
-                                    colors="primary:#110a5c,secondary:#110a5c"
-                                    style="width:150px;height:150px">
-                                </lord-icon>
-                            </span>
-                            <p>Ropa super <br> económica</p>
-                        </div>
-                        <div class="enlace">
-                            <span class="icon">
-                                <lord-icon
-                                    src="https://cdn.lordicon.com/dnoiydox.json"
-                                    trigger="hover"
-                                    colors="primary:#110a5c,secondary:#110a5c"
-                                    style="width:150px;height:150px">
-                                </lord-icon>
-                            </span>
-                            <p>Entregas <br> semanales</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <!-- Boton que activa la modal -->
-    <a class="btn_trespasos" id="btn_3">3 Pasos para emprender</a>
-    
-    <!-- Ventana modal -->
-    <div id="IrVentanaFlotante" class="modal">
-        <div class="ventana">
-            <a class="close_modal" id="close_modal">X</a>
-            <h2>3 Pasos para emprender:</h2>
-            <p>1 - Piensa en todos los productos que te gustaría vender y anótalos.</p>
-            <br>
-            <p>2 - Selecciona la idea que consideres que te conviene más.</p>
-            <br>
-            <p>3 - Escríbenos para asesorarte sobre las tiendas en línea donde puedes pedir tus productos</p>
-            <a class="btn_modal_contacto" href="https://api.whatsapp.com/send?phone=50374687973" target="_blank"><i class="fa-brands fa-whatsapp"></i> Más información</a>
-            <br>
-        </div>  
+    <div class="container">
+        <img src="./img/1920.png" class="img_1920">
+        <img src="./img/1366.png" class="img_1366">
+        <img src="./img/960.png" class="img_960">
+        <img src="./img/480.png" class="img_480">
+        <img src="./img/360.png" class="img_360">
     </div>
-
-    <!-- JS -->
-    <script src="main.js"></script>
+    <footer>
+        <ul class="navigation_items">
+            <li>
+                <a href="https://www.facebook.com/GlobalShoppingSv" target="_blank" id="item_cuatro">
+                    <span class="icon_nav">
+                        <i class="fa-brands fa-facebook"></i>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/globalshoppingsv/" target="_blank"  id="item_cuatro">
+                    <span class="icon_nav">
+                        <i class="fa-brands fa-instagram"></i>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.tiktok.com/@globalshoppingsv?lang=es" target="_blank" id="item_cuatro">
+                    <span class="icon_nav">
+                        <i class="fa-brands fa-tiktok"></i>
+                    </span>
+                </a>
+            </li>
+        </ul>
+    </footer>
+    <div class="btn_w">
+        <a class="btn-whatsapp" href="https://wa.me/50374687973?text=Hola!%20Estoy%20interesado%20en%20emprender%20con:" target="_blank">
+            <i class="fa-brands fa-whatsapp"></i>
+            ¡Luce como nunca antes!
+        </a>
+    </div>
 </body>
 </html>
